Alteração do projeto
Criação com Javascript

--- a/css/geradordeboxshadow.css
+++ b/css/geradordeboxshadow.css
@@ -47,7 +47,7 @@ h2 {
 .range-input input[type="range"] {
     width: 100%;
     height: 24px;
-    background-color: blue;
+    background-color: #D3D3D3;
     outline: none;
 }
 
@@ -57,4 +57,79 @@ h2 {
     background-color: #e9d60a;
     cursor: pointer;
 }
+
+.range-input-quadrado {
+    display: flex;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+    color: #555;
+    font-weight: bold;
+}
+
+.reference-input {
+    display: flex;
+    align-items: center;
+}
+
+.reference-input p {
+    margin-left: 4px;
+}
+
+.form-control input[type="text"] {
+    height: 30px;
+    width: 30px;
+    margin-left: 1rem;
+    text-align: center;
+}
+
+/* Novas Funcionalidade */ 
+#color-value {
+    min-width: 100px;
+}
+
+#inset {
+    align-self: start;
+    height: 20px;
+    width: 20px;
+}
+
+/* Preview */
+#box {
+    width: 100%;
+    height: 300px;
+    background-color: #e9d60a;
+    box-shadow: rgb(0, 0, 0) 62px 82px 79px 3px;
+    -webkit-box-shadow: rgb(0, 0, 0) 62px 82px 79px 3px;
+    -moz-box-shadow: rgb(0, 0, 0) 62px 82px 79px 3px;
+}
+
+/* Área de Geração */
+#generated-rule {
+    text-align: center;
+}
+
+#generated-rule p {
+    margin-bottom: .5rem;
+}
+
+#rules-area {
+    background-color: #d3d3d3;
+    max-width: 1000px;
+    margin: 0 auto;
+    border: 2px solid #e9d60a;
+    transition: .4s;
+    cursor: pointer;
+}
+
+#rules-area:hover {
+    background-color: #DFDFDF;
+}
+
+#copy-instructions  {
+    font-style: italic;
+    margin-top: 1rem;
+}
+
+
+
 
