--- a/css/geradordeboxshadow.css
+++ b/css/geradordeboxshadow.css
@@ -60,7 +60,7 @@ h2 {
     -webkit-appearance: none;
     width: 25px;
     height: 25px;
-    background-color: #e9d60a;
+    background-color: #0810ae;
     cursor: pointer;
 }
 
